--- a/SpringBoot/spring_project1/src/main/webapp/resources/css/style.css
+++ b/SpringBoot/spring_project1/src/main/webapp/resources/css/style.css
@@ -1,5 +1,43 @@
 @charset "UTF-8";
 
+
+*{
+	margin:0;
+	padding:0;
+}
+
+#container{
+	max-width: 1200px;
+	margin: 20px auto;
+	padding: 20px;
+	background-color: white;
+	box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+#menuAdmin{
+	padding: 20px;
+	border: 1px solid #ddd;
+	background-color: #f9f9f9;
+	border-radius: 10px;
+}
+
+#menuAdminH2{
+	margin-bottom: 20px;
+	font-size: 22px;
+	color: #333;
+	border-bottom: 2px solid #333;
+	padding-bottom: 10px;
+}
+
+#menuList{
+	margin-top: 20px;
+	padding: 10px;
+	border: 1px solid #ddd;
+	background-color: #fafafa;
+	border-radius: 5px;
+	min-height:50px;
+}
+
 #menuAdmin button{
 	padding: 10px 20px;
 	border: none;
